# aidev

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  environment.txt
Gen1/: bibliography.md  glossary.md  program.md  teaching-guide.md  workbook.md
examples/task-service/: AGENTS.md  Makefile  README.md  pyproject.toml
examples/task-service/docs/: spec.md
examples/task-service/src/task_service/: config.py  main.py  models.py  repository.py  service.py
examples/task-service/src/task_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/task-service/src/task_service/routers/: tasks.py
examples/task-service/tests/: test_integration.py  test_unit.py
prompts/: adr-from-transcript.md  blameless-lint.md  c4-from-compose.md  cli.md  devil-injection-test.md  devils-advocate.md  doc-drift-check.md  endpoint.md  find-tautologies.md  flaky-test-diagnosis.md  hdd-hypothesize.md  kill-mutant.md  local-code-review.md  openapi-descriptions.md  persistence.md  rag-system.md  readme-from-repo.md  scaffolding.md
research/: 2026-07-ai-landscape.md
scripts/: check.sh  md-to-pdf-all.py  md-to-pdf-all.sh  md-to-pdf.py  md-to-pdf.sh  split_module7.py  update_references.py
templates/: .ragignore  AGENTS.md.local-only  AGENTS.md.template  PR_TEMPLATE.md  README.md.template  ai-pr-description.md.template  architecture-c4-l1.mmd  architecture-c4-l2.mmd  edge-cases.md.template  mre.md.template  (+6 more)
templates/rag-minimal/: README.md  pyproject.toml
templates/rag-minimal/ragchat/: chunking.py  cli.py  config.py  generation.py  indexing.py  retrieval.py
(+29 files in other folders)
