[project]
name = "[PROJECT_NAME]-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.5.5",
    "httpx==0.27",
    "langchain-text-splitters==0.3.1",
    "pydantic==2.8",
    "rank-bm25==0.2.2",
    "typer==0.12",
]

[project.scripts]
[PROJECT_NAME]-rag = "ragchat.cli:app"

[tool.ruff]
line-length = 100
